[package]
name = "code-muse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-openai = "0.10.3"
clap = { version = "4.2.4", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
text_io = "0.1.12"
tokio = { version = "1.28.0", features = ["full"] }
